Added better formatting layout for game cards

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -147,9 +147,9 @@
                     <div class="game-role">DevOps Engineer, Gameplay Programmer, and Tools Programmer</div>
                     <div class="game-company">Artı XR</div>
                     <div class="game-details">
-                        <span><b>Platform:</b> Meta Quest</span>
-                        <span><b>Engine:</b> Unity</span>
-                        <span><b>Release Date:</b> 19 Feb, 2025</span>
+                        <span><b>Platform</b><br>Meta Quest</span>
+                        <span><b>Engine</b><br>Unity</span>
+                        <span><b>Release Date</b><br>19 Feb, 2025</span>
                     </div>
                     <p>Led the development of a tabletop turn-based strategy title that is highly inspired by Demeo and XCOM IPs. Was responsible for every technical aspect within the game, including (but not limited to) navigation mesh, pathfinding, artificial intelligence, CI/CD pipeline, and tools creation such as in-house map editor.</p>
                 </div>
@@ -162,9 +162,9 @@
                     <div class="game-role">DevOps Engineer</div>
                     <div class="game-company">Panteon</div>
                     <div class="game-details">
-                        <span><b>Platform:</b> Meta Quest, and Steam</span>
-                        <span><b>Engine:</b> Unity</span>
-                        <span><b>Release Date: </b> 30 Oct, 2023</span>
+                        <span><b>Platform</b><br>Meta Quest, and Steam</span>
+                        <span><b>Engine</b><br>Unity</span>
+                        <span><b>Release Date</b><br>30 Oct, 2023</span>
                     </div>
                     <p>Focused on a stable build and deployment pipeline for gameplay programming and testing teams. Also helped to troubleshoot gameplay and optimization-related issues when available.</p>
                 </div>
@@ -177,9 +177,9 @@
                     <div class="game-role">DevOps Engineer, and Tools Programmer</div>
                     <div class="game-company">Panteon</div>
                     <div class="game-details">
-                        <span><b>Platform:</b> Android, and iOS</span>
-                        <span><b>Engine:</b> Unity</span>
-                        <span><b>Release Date:</b> Winter 2022</span>
+                        <span><b>Platform</b><br>Android, and iOS</span>
+                        <span><b>Engine</b><br>Unity</span>
+                        <span><b>Release Date</b><br>Winter 2022</span>
                     </div>
                     <p>Established and maintained in-house tool distribution web and provided stable and rapid CI/CD pipeline for development teams.</p>
                 </div>
@@ -197,9 +197,9 @@
                     <div class="game-role">Game Developer</div>
                     <div class="game-company">Independent</div>
                     <div class="game-details">
-                        <span><b>Platform:</b> PC</span>
-                        <span><b>Engine:</b> Unity</span>
-                        <span><b>Release Date:</b> 07 Jan, 2024</span>
+                        <span><b>Platform</b><br>PC</span>
+                        <span><b>Engine</b><br>Unity</span>
+                        <span><b>Release Date</b><br>07 Jan, 2024</span>
                     </div>
                     <p>Minimal puzzle game inspired by Bomberman IP. Developed with a friend of mine who wants to break into the game industry as a game designer.</p>
                 </div>
@@ -211,9 +211,9 @@
                     <div class="game-role">Game Developer</div>
                     <div class="game-company">Independent</div>
                     <div class="game-details">
-                        <span><b>Platform:</b> PC</span>
-                        <span><b>Engine:</b> Unity</span>
-                        <span><b>Release Date:</b> Summer 2023</span>
+                        <span><b>Platform</b><br>PC</span>
+                        <span><b>Engine</b><br>Unity</span>
+                        <span><b>Release Date</b><br>Summer 2023</span>
                     </div>
                     <p>As a big fan of the Castlevania franchise, I remade the first chapter in Castlevania (1989) in the Unity engine. Reworked several gameplay aspects with my own inspired ideas.</p>
                 </div>
@@ -225,9 +225,9 @@
                     <div class="game-role">Game Developer</div>
                     <div class="game-company">Independent</div>
                     <div class="game-details">
-                        <span><b>Platform:</b> PC</span>
-                        <span><b>Engine:</b> Unity</span>
-                        <span><b>Release Date:</b> Winter 2023</span>
+                        <span><b>Platform</b><br>PC</span>
+                        <span><b>Engine</b><br>Unity</span>
+                        <span><b>Release Date</b><br>Winter 2023</span>
                     </div>
                     <p>Highly inspired by the beloved osu!, Craft your beat! is a chill sandbox where you can sit back and generate randomized drum beats.</p>
                 </div>
@@ -239,9 +239,9 @@
                     <div class="game-role">Game Developer</div>
                     <div class="game-company">Independent</div>
                     <div class="game-details">
-                        <span><b>Platform:</b> Android</span>
-                        <span><b>Engine:</b> Unity</span>
-                        <span><b>Release Date:</b> Winter 2017</span>
+                        <span><b>Platform</b><br>Android</span>
+                        <span><b>Engine</b><br>Unity</span>
+                        <span><b>Release Date</b><br>Winter 2017</span>
                     </div>
                     <p>Rogue-lite game inspired by The Binding of Isaac. Worked on this game during my college years, the second game I was able to actually finish.</p>
                 </div>
@@ -259,9 +259,9 @@
                     <div class="game-role">Game Developer</div>
                     <div class="game-company">Ludum Dare 45</div>
                     <div class="game-details">
-                        <span><b>Platform:</b> PC</span>
-                        <span><b>Engine:</b> Unity</span>
-                        <span><b>Release Date:</b> Fall 2019</span>
+                        <span><b>Platform</b><br>PC</span>
+                        <span><b>Engine</b><br>Unity</span>
+                        <span><b>Release Date</b><br>Fall 2019</span>
                     </div>
                     <p>Endless clicker game, which I developed for my first Ludum Dare entry. Features an orc with his lovely pickaxe and a mine where he can dig until oblivion.</p>
                 </div>
@@ -274,9 +274,9 @@
                     <div class="game-role">Game Developer</div>
                     <div class="game-company">Global Game Jam 2019</div>
                     <div class="game-details">
-                        <span><b>Platform:</b> PC</span>
-                        <span><b>Engine:</b> Unity</span>
-                        <span><b>Release Date:</b> Winter 2019</span>
+                        <span><b>Platform</b><br>PC</span>
+                        <span><b>Engine</b><br>Unity</span>
+                        <span><b>Release Date</b><br>Winter 2019</span>
                     </div>
                     <p>Result of my first game jam participation: endless runner with cute pixel art graphics.</p>
                 </div>
