Updated game descriptions in portfolio

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -166,7 +166,7 @@
                         <span><b>Engine</b><br>Unity</span>
                         <span><b>Release Date</b><br>30 Oct, 2023</span>
                     </div>
-                    <p>Focused on a stable build and deployment pipeline for gameplay programming and testing teams. Also helped to troubleshoot gameplay and optimization-related issues when available.</p>
+                    <p>Developed and maintained a stable build and deployment pipeline, ensuring seamless integration for gameplay programming and testing teams. Additionally, provided troubleshooting support for gameplay and optimization-related issues as needed.</p>
                 </div>
 
                 <div class="game-card">
@@ -181,7 +181,7 @@
                         <span><b>Engine</b><br>Unity</span>
                         <span><b>Release Date</b><br>Winter 2022</span>
                     </div>
-                    <p>Established and maintained in-house tool distribution web and provided stable and rapid CI/CD pipeline for development teams.</p>
+                    <p>Designed, implemented, and maintained an in-house tool distribution platform, enabling efficient access to development tools. Established a robust and high-speed CI/CD pipeline to streamline the development process for teams.</p>
                 </div>
             </div>
         </div>
