Refined description sections for portfolio

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -126,7 +126,7 @@
     <div class="container">
         <div class="header">
             <h1>İsmail Özsaygı</h1>
-            <h2>Software Engineer and Video Game Developer</h2>
+            <h2>Generalist Video Game Developer</h2>
         </div>
 
         <div class="social-links">
@@ -147,11 +147,11 @@
                     <div class="game-role">DevOps Engineer, Gameplay Programmer, and Tools Programmer</div>
                     <div class="game-company">Artı XR</div>
                     <div class="game-details">
-                        <span><b>Platform</b><br>Meta Quest</span>
+                        <span><b>Platforms</b><br>Meta Quest</span>
                         <span><b>Engine</b><br>Unity</span>
                         <span><b>Release Date</b><br>19 Feb, 2025</span>
                     </div>
-                    <p>Led the development of a tabletop turn-based strategy title that is highly inspired by Demeo and XCOM IPs. Was responsible for every technical aspect within the game, including (but not limited to) navigation mesh, pathfinding, artificial intelligence, CI/CD pipeline, and tools creation such as in-house map editor.</p>
+                    <p>Led the development of a tabletop turn-based strategy game inspired by Demeo and XCOM, overseeing all technical aspects from inception to implementation. Designed and optimized core systems, including custom navigation mesh generation system, pathfinding, and artificial intelligence. Developed an in-house map editor to enhance level design efficiency and established a CI/CD pipeline to streamline development and deployment.</p>
                 </div>
 
                 <div class="game-card">
@@ -159,14 +159,14 @@
                         <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/hrvr.jpg?raw=true" alt="Home Restoration VR">
                     </a>
                     <div class="game-title">Home Restoration VR</div>
-                    <div class="game-role">DevOps Engineer</div>
+                    <div class="game-role">DevOps Engineer, and Tools Programmer</div>
                     <div class="game-company">Panteon</div>
                     <div class="game-details">
-                        <span><b>Platform</b><br>Meta Quest, and Steam</span>
+                        <span><b>Platforms</b><br>Meta Quest, and Steam</span>
                         <span><b>Engine</b><br>Unity</span>
                         <span><b>Release Date</b><br>30 Oct, 2023</span>
                     </div>
-                    <p>Developed and maintained a stable build and deployment pipeline, ensuring seamless integration for gameplay programming and testing teams. Additionally, provided troubleshooting support for gameplay and optimization-related issues as needed.</p>
+                    <p>Architected and maintained a robust build and deployment pipeline, ensuring seamless integration for gameplay programming and testing teams. Implemented automated workflows to reduce build times and improve iteration speed. Provided technical support for debugging gameplay systems and optimizing performance across the project lifecycle.</p>
                 </div>
 
                 <div class="game-card">
@@ -177,17 +177,17 @@
                     <div class="game-role">DevOps Engineer, and Tools Programmer</div>
                     <div class="game-company">Panteon</div>
                     <div class="game-details">
-                        <span><b>Platform</b><br>Android, and iOS</span>
+                        <span><b>Platforms</b><br>Android, and iOS</span>
                         <span><b>Engine</b><br>Unity</span>
                         <span><b>Release Date</b><br>Winter 2022</span>
                     </div>
-                    <p>Designed, implemented, and maintained an in-house tool distribution platform, enabling efficient access to development tools. Established a robust and high-speed CI/CD pipeline to streamline the development process for teams.</p>
+                    <p>Designed, implemented, and maintained an in-house tool distribution platform, enabling seamless access to essential development tools. Engineered a high-performance CI/CD pipeline that significantly accelerated build automation, testing, and deployment processes, enhancing overall development efficiency.</p>
                 </div>
             </div>
         </div>
 
         <div class="section">
-            <h2>Personal Projects</h2>
+            <h2>Passion Projects</h2>
             <div class="game-list">
                 <div class="game-card">
                     <a href="https://iozsaygi.itch.io/kubemetrik" target="_blank" title="KUBEMETRIK!">
@@ -197,11 +197,11 @@
                     <div class="game-role">Game Developer</div>
                     <div class="game-company">Independent</div>
                     <div class="game-details">
-                        <span><b>Platform</b><br>PC</span>
+                        <span><b>Platforms</b><br>PC</span>
                         <span><b>Engine</b><br>Unity</span>
                         <span><b>Release Date</b><br>07 Jan, 2024</span>
                     </div>
-                    <p>Minimal puzzle game inspired by Bomberman IP. Developed with a friend of mine who wants to break into the game industry as a game designer.</p>
+                    <p>Co-developed a minimalist puzzle game inspired by Bomberman, collaborating with an aspiring game designer to bring their vision to life.</p>
                 </div>
                 <div class="game-card">
                     <a href="https://iozsaygi.itch.io/c1l1" target="_blank" title="C1L1">
@@ -211,11 +211,11 @@
                     <div class="game-role">Game Developer</div>
                     <div class="game-company">Independent</div>
                     <div class="game-details">
-                        <span><b>Platform</b><br>PC</span>
+                        <span><b>Platforms</b><br>PC</span>
                         <span><b>Engine</b><br>Unity</span>
                         <span><b>Release Date</b><br>Summer 2023</span>
                     </div>
-                    <p>As a big fan of the Castlevania franchise, I remade the first chapter in Castlevania (1989) in the Unity engine. Reworked several gameplay aspects with my own inspired ideas.</p>
+                    <p>Recreated the first chapter of Castlevania (1989) in Unity as a passion project, modernizing gameplay elements while staying faithful to the original. Introduced personal design enhancements to refine combat, movement, and level flow.</p>
                 </div>
                 <div class="game-card">
                     <a href="https://iozsaygi.itch.io/craft-your-beat" target="_blank" title="Craft your beat!">
@@ -225,11 +225,11 @@
                     <div class="game-role">Game Developer</div>
                     <div class="game-company">Independent</div>
                     <div class="game-details">
-                        <span><b>Platform</b><br>PC</span>
+                        <span><b>Platforms</b><br>PC</span>
                         <span><b>Engine</b><br>Unity</span>
                         <span><b>Release Date</b><br>Winter 2023</span>
                     </div>
-                    <p>Highly inspired by the beloved osu!, Craft your beat! is a chill sandbox where you can sit back and generate randomized drum beats.</p>
+                    <p>Designed and developed Craft Your Beat!, a sandbox rhythm game inspired by osu!. Created procedural beat generation mechanics that allow players to experiment with randomized drum patterns in a relaxing, interactive environment.</p>
                 </div>
                 <div class="game-card">
                     <a href="https://iozsaygi.itch.io/dungeons-of-borne" target="_blank" title="Dungeons of Borne">
@@ -239,11 +239,11 @@
                     <div class="game-role">Game Developer</div>
                     <div class="game-company">Independent</div>
                     <div class="game-details">
-                        <span><b>Platform</b><br>Android</span>
+                        <span><b>Platforms</b><br>Android</span>
                         <span><b>Engine</b><br>Unity</span>
                         <span><b>Release Date</b><br>Winter 2017</span>
                     </div>
-                    <p>Rogue-lite game inspired by The Binding of Isaac. Worked on this game during my college years, the second game I was able to actually finish.</p>
+                    <p>Developed a rogue-lite game inspired by The Binding of Isaac as a solo project during my college years. Designed and implemented core gameplay mechanics, enemy AI, and progression systems. This was my second fully completed game.</p>
                 </div>
             </div>
         </div>
@@ -259,11 +259,11 @@
                     <div class="game-role">Game Developer</div>
                     <div class="game-company">Ludum Dare 45</div>
                     <div class="game-details">
-                        <span><b>Platform</b><br>PC</span>
+                        <span><b>Platforms</b><br>PC</span>
                         <span><b>Engine</b><br>Unity</span>
                         <span><b>Release Date</b><br>Fall 2019</span>
                     </div>
-                    <p>Endless clicker game, which I developed for my first Ludum Dare entry. Features an orc with his lovely pickaxe and a mine where he can dig until oblivion.</p>
+                    <p>Created an endless clicker game for my first Ludum Dare entry, focusing on simple yet addictive mechanics. Designed a progression system featuring an orc mining endlessly with his trusty pickaxe.</p>
                 </div>
 
                 <div class="game-card">
@@ -274,11 +274,11 @@
                     <div class="game-role">Game Developer</div>
                     <div class="game-company">Global Game Jam 2019</div>
                     <div class="game-details">
-                        <span><b>Platform</b><br>PC</span>
+                        <span><b>Platforms</b><br>PC</span>
                         <span><b>Engine</b><br>Unity</span>
                         <span><b>Release Date</b><br>Winter 2019</span>
                     </div>
-                    <p>Result of my first game jam participation: endless runner with cute pixel art graphics.</p>
+                    <p>Developed an endless runner featuring charming pixel art as my first game jam project. Focused on UI framework.</p>
                 </div>
             </div>
         </div>
