Updated small part of role description within game card

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -151,7 +151,7 @@
                         <span><b>Engine</b><br>Unity</span>
                         <span><b>Release Date</b><br>19 Feb, 2025</span>
                     </div>
-                    <p>Led the development of a tabletop turn-based strategy game inspired by Demeo and XCOM, overseeing all technical aspects from inception to implementation. Designed and optimized core systems, including custom navigation mesh generation system, pathfinding, and artificial intelligence. Developed an in-house map editor to enhance level design efficiency and established a CI/CD pipeline to streamline development and deployment.</p>
+                    <p>Led the development of a tabletop turn-based strategy game inspired by Demeo and XCOM, overseeing all technical aspects from inception to implementation. Designed and optimized core systems, including custom navigation mesh generation, pathfinding, and artificial intelligence. Developed an in-house map editor to enhance level design efficiency and established a CI/CD pipeline to streamline development and deployment.</p>
                 </div>
 
                 <div class="game-card">
