--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -99,6 +99,7 @@
             display: flex;
             flex-direction: column;
             gap: 3px;
+	    	font-weight: 350;
         }
         .social-links {
             text-align: center;
