Updated 'Tactica' game card description.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -152,7 +152,7 @@
                         <span><b>Engine</b><br>Unity</span>
                         <span><b>Release Date</b><br>19 Feb, 2025</span>
                     </div>
-                    <p>Led the development of a tabletop turn-based strategy game inspired by Demeo and XCOM, overseeing all technical aspects from inception to implementation. Designed and optimized core systems, including custom navigation mesh generation, pathfinding, and artificial intelligence. Developed an in-house map editor to enhance level design efficiency and established a CI/CD pipeline to streamline development and deployment.</p>
+                    <p>Engineered core gameplay systems from concept to release, including a high-performance navigation and pathfinding solution built with Unity DOTS and spatial data structures. Implemented adaptive AI using behavior trees, developed custom tooling for both automated testing and dependency injection, and led the setup of a robust CI/CD pipeline with TeamCity and GitHub Actions—streamlining development, improving scalability, and accelerating iteration across the team.</p>
                 </div>
 
                 <div class="game-card">
