Image links converted to raw user content ones

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -131,10 +131,10 @@
         </div>
 
         <div class="social-links">
-            <a href="https://iozsaygi.github.io/" target="_blank"><img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/logos/blog.png?raw=true" title="Blog" alt="Blog"></a>
-            <a href="https://github.com/iozsaygi" target="_blank"><img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/logos/github.png?raw=true" title="GitHub" alt="GitHub"></a>
-            <a href="https://www.linkedin.com/in/ismail-%C3%B6zsayg%C4%B1-62ab1a201/" target="_blank"><img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/logos/linkedin.png?raw=true" title="LinkedIn" alt="LinkedIn"></a>
-            <a href="https://www.youtube.com/@iozsaygi" target="_blank"><img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/logos/youtube.png?raw=true" title="YouTube" alt="YouTube"></a>
+            <a href="https://iozsaygi.github.io/" target="_blank"><img src="https://raw.githubusercontent.com/iozsaygi/iozsaygi.github.io/main/assets/logos/blog.png" title="Blog" alt="Blog"></a>
+            <a href="https://github.com/iozsaygi" target="_blank"><img src="https://raw.githubusercontent.com/iozsaygi/iozsaygi.github.io/main/assets/logos/github.png" title="GitHub" alt="GitHub"></a>
+            <a href="https://www.linkedin.com/in/ismail-%C3%B6zsayg%C4%B1-62ab1a201/" target="_blank"><img src="https://raw.githubusercontent.com/iozsaygi/iozsaygi.github.io/main/assets/logos/linkedin.png" title="LinkedIn" alt="LinkedIn"></a>
+            <a href="https://www.youtube.com/@iozsaygi" target="_blank"><img src="https://raw.githubusercontent.com/iozsaygi/iozsaygi.github.io/main/assets/logos/youtube.png" title="YouTube" alt="YouTube"></a>
         </div>
 
         <div class="section">
@@ -142,7 +142,7 @@
             <div class="game-list">
                 <div class="game-card">
                     <a href="https://www.meta.com/experiences/tactica/26709789558666303/?srsltid=AfmBOorCc-QT2nVCjSjRuKDXbVG9mP1PdVq1yJ4rJXcDcx9OipvOpgDj" target="_blank" title= "Tactica: First Contact">
-                        <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/tactica.jpg?raw=true" alt="Tactica: First Contact">
+                        <img src="https://raw.githubusercontent.com/iozsaygi/iozsaygi.github.io/main/assets/banners/tactica.jpg" alt="Tactica: First Contact">
                     </a>
                     <div class="game-title">Tactica: First Contact</div>
                     <div class="game-role">DevOps Engineer, Gameplay Programmer, and Tools Programmer</div>
@@ -156,7 +156,7 @@
 
                 <div class="game-card">
                     <a href="https://store.steampowered.com/app/2527980/Home_Restoration_VR/" target="_blank" title="Home Restoration VR">
-                        <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/hrvr.jpg?raw=true" alt="Home Restoration VR">
+                        <img src="https://raw.githubusercontent.com/iozsaygi/iozsaygi.github.io/main/assets/banners/hrvr.jpg" alt="Home Restoration VR">
                     </a>
                     <div class="game-title">Home Restoration VR</div>
                     <div class="game-role">DevOps Engineer, and Tools Programmer</div>
@@ -170,7 +170,7 @@
 
                 <div class="game-card">
                     <a href="https://apps.apple.com/us/app/raid-rush-tower-defense-td/id1662335371" target="_blank" title="Raid Rush: Tower Defense TD">
-                        <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/rrtd.jpg?raw=true" alt="Raid Rush: Tower Defense TD">
+                        <img src="https://raw.githubusercontent.com/iozsaygi/iozsaygi.github.io/main/assets/banners/rrtd.jpg" alt="Raid Rush: Tower Defense TD">
                     </a>
                     <div class="game-title">Raid Rush: Tower Defense TD</div>
                     <div class="game-role">DevOps Engineer, and Tools Programmer</div>
@@ -189,7 +189,7 @@
             <div class="game-list">
                 <div class="game-card">
                     <a href="https://iozsaygi.itch.io/kubemetrik" target="_blank" title="KUBEMETRIK!">
-                        <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/kubemetrik.png?raw=true" alt="KUBEMETRIK!">
+                        <img src="https://raw.githubusercontent.com/iozsaygi/iozsaygi.github.io/main/assets/banners/kubemetrik.png" alt="KUBEMETRIK!">
                     </a>
                     <div class="game-title">KUBEMETRIK!</div>
                     <div class="game-role">Game Developer</div>
@@ -202,7 +202,7 @@
                 </div>
                 <div class="game-card">
                     <a href="https://iozsaygi.itch.io/c1l1" target="_blank" title="C1L1">
-                        <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/c1l1.png?raw=true" alt="C1L1">
+                        <img src="https://raw.githubusercontent.com/iozsaygi/iozsaygi.github.io/main/assets/banners/c1l1.png" alt="C1L1">
                     </a>
                     <div class="game-title">C1L1</div>
                     <div class="game-role">Game Developer</div>
@@ -215,7 +215,7 @@
                 </div>
                 <div class="game-card">
                     <a href="https://iozsaygi.itch.io/craft-your-beat" target="_blank" title="Craft your beat!">
-                        <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/cyb.png?raw=true" alt="Craft your beat!">
+                        <img src="https://raw.githubusercontent.com/iozsaygi/iozsaygi.github.io/main/assets/banners/cyb.png" alt="Craft your beat!">
                     </a>
                     <div class="game-title">Craft your beat!</div>
                     <div class="game-role">Game Developer</div>
@@ -228,7 +228,7 @@
                 </div>
                 <div class="game-card">
                     <a href="https://iozsaygi.itch.io/dungeons-of-borne" target="_blank" title="Dungeons of Borne">
-                        <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/dob.png?raw=true" alt="Dungeons of Borne">
+                        <img src="https://raw.githubusercontent.com/iozsaygi/iozsaygi.github.io/main/assets/banners/dob.png" alt="Dungeons of Borne">
                     </a>
                     <div class="game-title">Dungeons of Borne</div>
                     <div class="game-role">Game Developer</div>
@@ -247,7 +247,7 @@
             <div class="game-list">
                 <div class="game-card">
                     <a href="https://iozsaygi.itch.io/mr-grind" target="_blank" title="Mr. Grind">
-                        <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/mrg.png?raw=true" alt="Mr. Grind">
+                        <img src="https://raw.githubusercontent.com/iozsaygi/iozsaygi.github.io/main/assets/banners/mrg.png" alt="Mr. Grind">
                     </a>
                     <div class="game-title">Mr. Grind</div>
                     <div class="game-role">Game Developer</div>
@@ -261,7 +261,7 @@
 
                 <div class="game-card">
                     <a href="https://v3.globalgamejam.org/2019/games/tonton-back-home" target="_blank" title="TonTon: Back to Home">
-                        <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/ttbth.png?raw=true" alt="TonTon: Back to Home">
+                        <img src="https://raw.githubusercontent.com/iozsaygi/iozsaygi.github.io/main/assets/banners/ttbth.png" alt="TonTon: Back to Home">
                     </a>
                     <div class="game-title">TonTon: Back to Home</div>
                     <div class="game-role">Game Developer</div>
